--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/weiC.css">
         <link rel="stylesheet" href="css/rw-style.css">
+        <link rel="stylesheet" href="css/lx-style.css">
 
 
 
@@ -76,6 +77,51 @@
                 </div>
             </div>
         </nav>
+
+        <!-- 客服部分 -->
+        <div style="right:-230px;" class="contactusdiyou">
+            <div class="hoverbtn">
+                <span>联</span><span>系</span><span>我</span><span>们</span>
+                <img class="hoverimg" src="images/hoverbtnbg.gif" height="9" width="13">
+            </div>
+            <div class="conter">
+                <div class="con1">
+                    <dl class="fn_cle">
+                        <dt><img src="images/tel.png" height="31" width="31"></dt>
+                        <dd class="f1">咨询热线：</dd>
+                        <dd class="f2"><span class="ph_num">158-998-513-32</span></dd>
+                    </dl>
+                </div>
+                <div class="blank0"></div>
+                <div class="qqcall">
+                    <dl class="fn_cle">
+                        <dt><img src="images/zxkfqq.png" height="31" width="31"></dt>
+                        <dd class="f1 f_s14">在线客服：</dd>
+                        <dd class="f2 kefuQQ">
+                            <span>客服一</span>
+                            <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2591052501&amp;site=qq&amp;"></a>
+                            <br/>
+                            <span>客服二</span>
+                            <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2591052501&amp;site=qq&amp;"></a>
+                        </dd>
+                    </dl>
+                    <div class="blank0"></div>
+                </div>
+                <div class="blank0"></div>
+                <div class="weixincall">
+                    <dl class="fn_cle">
+                        <dt><img src="images/weixin.png" height="31" width="31"></dt>
+                        <dd class="f1">官方微信站：</dd>
+                        <dd class="f3"><img src="images/wechat_code.png" height="73" width="73"></dd>
+                    </dl>
+                </div>
+                <div class="blank0"></div>
+                <div class="dytimer">
+                    <span style="font-weight: bold;">公司官网：</span>
+                    <span><a href="">http://www.weich520.com/</a></span>
+                </div>
+            </div>
+        </div>
 
         <!-- 顶部-->
         <header class="" id="page-top">
@@ -339,7 +385,7 @@
                                 </ul>
                             </div>
                         </li>
-
+                        <!--UI-->
                         <li>
                             <p>人为生活而设计，设计为生活而存在。</p>
                             <div class="cd-author">
@@ -362,20 +408,55 @@
                             </div>
                         </li>
 
-                        <!--UI-->
+
 
 
                     </ul>
                     </div>
                 </div>
             </section>
+            <!--局部 第五个盒子-->
+            <section id="contact" class="box-content box-5">
+                <div class="container">
+                    <div class="row heading">
+                        <div class="col-lg-12">
+                            <h2>联系我们</h2>
+                            <hr>
+                            <div class="intro">竭尽自己最大的努力为您服务是我们的一直坚守的原则，如您有任何问题需要我们协助，请通过下述方式联系我们：</div>
+                        </div>
+                    </div>
+                    <div class="row box-5-content">
+                        <div class="col-lg-5 box-contact-5">
+                            <p>如您想了解更多，请拨打我们的热线</p>
+                            <br/>
+                            <p>客服热线：15899851332</p>
+                            <p>客服邮箱：tiny.wang@weich520.com</p>
+                            <p>服务时间：周一至周五 9:00-18:00</p>
+                        </div>
+                        <div class="col-lg-6 box-contact-5">
+                            <p>如您更有好的想法需要与我们沟通，请联系营销中心</p>
+                            <br/>
+                            <p>服务热线：15899851332</p>
+                            <p>E-mail：tiny.wang@weich520.com</p>
+                            <p>地址：深圳市龙岗区坂田街道侨联东5巷13号906室</p>
+                        </div>
 
+                    </div>
+                </div>
+            </section>
         </div>
-        <script src="js/fire.js"></script>
+    <!--页脚-->
+        <footer>
+            <div>
+                <p>备案号： 粤ICP备17144637号-1</p>
+            </div>
+        </footer>
+
         <script src="jquery-3.2.1/jquery-3.2.1.min.js"></script>
         <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
         <script src="jquery-3.2.1/jquery.flexslider-min.js"></script>
         <script src="jquery-3.2.1/masonry.pkgd.min.js"></script>
         <script src="js/rw-js.js"></script>
+        <script src="js/lx-js.js"></script>
     </body>
 </html>
