--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <meta name="Robots" content="all"/>
                 <!--重置css -->
         <link rel="stylesheet" href="css/reset.css">
-        <!-- 字体-->
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+
         <!--bootstrap核心css  -->
         <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/weiC.css">
@@ -447,8 +446,13 @@
         </div>
     <!--页脚-->
         <footer>
-            <div>
-                <p>备案号： 粤ICP备17144637号-1</p>
+            <div class="wrap-footer">
+            <div class="container">
+                <div class="col-lg-12 box-footer">
+                    <p>备案号： 粤ICP备17144637号-1</p>
+                </div>
+
+            </div>
             </div>
         </footer>
 
