--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-default navbar-fixed-top " role="navigation">
             <div class="container">
                 <!--pc切换移动为更好的移动显示导航-->
-                <div class="navbar-header ">
+                <div class="navbar-header page-scroll">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">切换导航</span>
                         <!--移动导航时线 -->
@@ -52,25 +52,25 @@
                     <ul class="nav navbar-nav navbar-right">
                         <!--隐藏 -->
                         <li class="hidden">
-                            <a href="#page-top"></a>
+                            <a href="#page-top" class="page-scroll" ></a>
                         </li>
                         <li>
-                            <a href="#page-top" >首页</a>
+                            <a href="#page-top" class="page-scroll" >首页</a>
                         </li>
                         <li>
-                            <a href="#services" >我们的服务</a>
+                            <a href="#services" class="page-scroll" >我们的服务</a>
                         </li>
                         <li>
-                            <a href="#new" >New</a>
+                            <a href="#new" class="page-scroll" >New</a>
                         </li>
                         <li>
-                            <a href="#about" >关于我们</a>
+                            <a href="#about" class="page-scroll" >关于我们</a>
                         </li>
                         <li>
-                            <a href="#team" >团队</a>
+                            <a href="#team" class="page-scroll" >团队</a>
                         </li>
                         <li>
-                            <a href="#contact" >联系我们</a>
+                            <a href="#contact" class="page-scroll" >联系我们</a>
                         </li>
                     </ul>
                 </div>
@@ -462,5 +462,6 @@
         <script src="jquery-3.2.1/masonry.pkgd.min.js"></script>
         <script src="js/rw-js.js"></script>
         <script src="js/lx-js.js"></script>
+        <script src="js/cbpAnimatedHeader.js"></script>
     </body>
 </html>
