--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             <p>
                                 管理软件定制开发、电商平台定制开发、APP定制开发、微信平台定制开发.
                             </p>
-                            <button class="btn btn-2 btn-box-1" type="button">更多</button>
+                            <button class="btn btn-2 btn-box-1" type="button">更多请咨询</button>
                         </div>
                         <!--第二个-->
                         <div class="col-lg-3 box-item">
@@ -194,7 +194,7 @@
                             <p>
                                 项目管理、项目监理、产品设计、需求分析、UI/UE设计、其他设计管理&产品.
                             </p>
-                            <button class="btn btn-2 btn-box-1" type="button">更多</button>
+                            <button class="btn btn-2 btn-box-1" type="button">更多请咨询</button>
                         </div>
                         <!--第三个-->
                         <div class="col-lg-3 box-item">
@@ -208,7 +208,7 @@
                             <p>
                                 提升企业IT管理水平、规范IT环境使用、明确IT管理收益、获取IT资源的投入所产生的价值和收益
                             </p>
-                            <button class="btn btn-2 btn-box-1" type="button">更多</button>
+                            <button class="btn btn-2 btn-box-1" type="button">更多请咨询</button>
                         </div>
                         <!--第四个-->
                         <div class="col-lg-3 box-item">
@@ -222,7 +222,7 @@
                             <p>
                                 根据客户具体情况，一个或者几个工程师长驻在客户处，为客户进行日常维护。
                             </p>
-                            <button class="btn btn-2 btn-box-1" type="button">更多</button>
+                            <button class="btn btn-2 btn-box-1" type="button">更多请咨询</button>
                         </div>
                     </div>
                 </div>
