--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!--字符 -->
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
         <!-- 移动端视口-->
-        <meta name="viewport" content="width=decice-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
         <!--标题 -->
         <title>巍创科技</title>
         <!-- 浏览器显示-->
@@ -455,13 +455,13 @@
             </div>
             </div>
         </footer>
-        
+
         <script src="jquery-3.2.1/jquery-3.2.1.min.js"></script>
         <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
         <script src="jquery-3.2.1/jquery.flexslider-min.js"></script>
         <script src="jquery-3.2.1/masonry.pkgd.min.js"></script>
         <script src="js/rw-js.js"></script>
         <script src="js/lx-js.js"></script>
-        <script src="js/cbpAnimatedHeader.js"></script>
+
     </body>
 </html>
